# B3DFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/CMake/: B3DFrameworkConfig.h.in  B3DHLSLCrossCompileTargets.cpp.in  BsEngineConfig.h.in  BsFrameworkConfig.h.in  BuiltinAssetUtility.cmake  DownloadPackageUtility.cmake  FindPackageOrBuild.cmake  GenerateScriptBindings.cmake  Globbing.cmake  HelperMethods.cmake  PrebuiltDependenciesUtility.cmake  Prerequisites.cmake  ProjectDefaults.cmake  Properties.cmake  RequiredNETAssemblies.txt  StockIcons.cmake  Utility.cmake
Source/CMake/Modules/: FindBansheeCodeGenerator.cmake  FindDotNETCoreMono.cmake  FindFBXSDK.cmake  FindFLAC.cmake  FindFMOD.cmake  FindGameNetworkingSockets.cmake  FindLibICU.cmake  FindMoltenVK.cmake  FindOpenAL.cmake  FindPhysX.cmake  FindRakNet.cmake  FindRenderDoc.cmake  FindSPIRVCross.cmake  FindXShaderCompiler.cmake  Findbison.cmake  Findbsf.cmake  FindbsfImportTool.cmake  Findflex.cmake  Findfreeimg.cmake  Findfreetype.cmake  Findglslang.cmake  Findmono.cmake  Findnvtt.cmake  Findogg.cmake  Findsnappy.cmake  Findvorbis.cmake
Source/CMake/Scripts/: BuildStockIcons.cmake.in  GenerateDocumentation.cmake.in
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: B3DApplication.cpp  B3DApplication.h  B3DPrerequisites.h
Source/Engine/Utility/: B3DUtilityPrerequisites.h
Source/Foundation/: CMakeLists.txt
Source/Foundation/Core/: B3DApplication.cpp  B3DApplication.h  B3DCorePrerequisites.h  B3DEntry.h  B3DPrerequisites.h
Source/Foundation/Engine/: B3DApplication.cpp  B3DApplication.h  B3DEntry.h  B3DPrerequisites.h
Source/Foundation/Utility/: B3DUtilityPrerequisites.h
Source/Foundation/bsfCore/: BsCoreApplication.cpp  BsCoreApplication.h  BsCorePrerequisites.h  VSVisualizations.natvis
Source/Foundation/bsfEngine/: BsApplication.cpp  BsApplication.h  BsEntry.h  BsPrerequisites.h
Source/Foundation/bsfUtility/: BsUtilityPrerequisites.h
Source/Plugins/Shared/: B3DGLSLToSPIRV.cpp  B3DGLSLToSPIRV.h
Source/Plugins/bsfD3D11RenderAPI/: BsD3D11BlendState.cpp  BsD3D11BlendState.h  BsD3D11CommandBuffer.cpp  BsD3D11CommandBuffer.h  BsD3D11CommandBufferManager.cpp  BsD3D11CommandBufferManager.h  BsD3D11DepthStencilState.cpp  BsD3D11DepthStencilState.h  BsD3D11Device.cpp  BsD3D11Device.h  BsD3D11Driver.cpp  BsD3D11Driver.h  BsD3D11DriverList.cpp  BsD3D11DriverList.h  BsD3D11EventQuery.cpp  BsD3D11EventQuery.h  BsD3D11GpuBuffer.cpp  BsD3D11GpuBuffer.h  BsD3D11GpuBufferView.cpp  BsD3D11GpuBufferView.h  BsD3D11GpuParamBlockBuffer.cpp  BsD3D11GpuParamBlockBuffer.h  BsD3D11GpuProgram.cpp  BsD3D11GpuProgram.h  BsD3D11HLSLParamParser.cpp  BsD3D11HLSLParamParser.h  BsD3D11HLSLProgramFactory.cpp  BsD3D11HLSLProgramFactory.h  BsD3D11HardwareBuffer.cpp  BsD3D11HardwareBuffer.h  BsD3D11HardwareBufferManager.cpp  BsD3D11HardwareBufferManager.h  BsD3D11IndexBuffer.cpp  BsD3D11IndexBuffer.h  BsD3D11InputLayoutManager.cpp  BsD3D11InputLayoutManager.h  BsD3D11Mappings.cpp  BsD3D11Mappings.h  BsD3D11OcclusionQuery.cpp  BsD3D11OcclusionQuery.h  (+36 more)
Source/Plugins/bsfD3D12GpuBackend/: B3DD3D12Framebuffer.cpp  B3DD3D12GpuBackend.h  B3DD3D12GpuBuffer.cpp  B3DD3D12GpuCommandBuffer.cpp  B3DD3D12GpuCommandBuffer.h  B3DD3D12GpuDevice.cpp  B3DD3D12GpuDevice.h  B3DD3D12GpuParameterSet.cpp  B3DD3D12GpuParameterSet.h  B3DD3D12GpuPipelineParameterLayout.cpp  B3DD3D12GpuProgram.cpp  B3DD3D12GpuQueue.cpp  B3DD3D12GpuQueue.h  B3DD3D12Queries.cpp  B3DD3D12Queries.h  B3DD3D12Resource.h  B3DD3D12ShaderCompiler.cpp  B3DD3D12ShaderCompiler.h  B3DD3D12Texture.cpp
Source/Plugins/bsfD3D12RenderAPI/: B3DD3D12Framebuffer.cpp  B3DD3D12Framebuffer.h  B3DD3D12GpuBackend.cpp  B3DD3D12GpuBackend.h  B3DD3D12GpuBuffer.cpp  B3DD3D12GpuBuffer.h  B3DD3D12GpuCommandBuffer.cpp  B3DD3D12GpuCommandBuffer.h  B3DD3D12GpuDevice.cpp  B3DD3D12GpuDevice.h  B3DD3D12GpuParameterSet.cpp  B3DD3D12GpuParameterSet.h  B3DD3D12GpuParameters.cpp  B3DD3D12GpuParameters.h  B3DD3D12GpuPipelineParameterLayout.cpp  B3DD3D12GpuPipelineParameterLayout.h  B3DD3D12GpuPipelineState.cpp  B3DD3D12GpuPipelineState.h  B3DD3D12GpuProgram.cpp  B3DD3D12GpuProgram.h  B3DD3D12GpuQueue.cpp  B3DD3D12GpuQueue.h  B3DD3D12Plugin.cpp  B3DD3D12Prerequisites.h  B3DD3D12Queries.cpp  B3DD3D12Queries.h  B3DD3D12RenderTexture.cpp  B3DD3D12RenderTexture.h  B3DD3D12RenderWindowSurface.cpp  B3DD3D12RenderWindowSurface.h  B3DD3D12Resource.h  B3DD3D12SamplerState.cpp  B3DD3D12SamplerState.h  B3DD3D12ShaderCompiler.cpp  B3DD3D12ShaderCompiler.h  B3DD3D12SwapChain.cpp  B3DD3D12SwapChain.h  B3DD3D12Texture.cpp  B3DD3D12Texture.h  B3DD3D12Utility.cpp  (+2 more)
Source/Plugins/bsfFBXImporter/: B3DFBXImportData.h  B3DFBXImporter.cpp  B3DFBXImporter.h  BsFBXImportData.cpp  BsFBXImportData.h  BsFBXImporter.cpp  BsFBXImporter.h  BsFBXPlugin.cpp  BsFBXPrerequisites.h  BsFBXUtility.cpp  BsFBXUtility.h  BsFBXWin32Resource.rc  CMakeLists.txt
Source/Plugins/bsfFMOD/: B3DFMODAudio.cpp  B3DFMODAudio.h  B3DFMODAudioClip.cpp  B3DFMODAudioClip.h  B3DFMODAudioListener.h  B3DFMODAudioSource.cpp  B3DFMODImporter.cpp  B3DFMODImporter.h  B3DFMODPlugin.cpp  BsFMODAudio.cpp  BsFMODAudio.h  BsFMODAudioClip.cpp  BsFMODAudioClip.h  BsFMODAudioListener.cpp  BsFMODAudioListener.h  BsFMODAudioSource.cpp  BsFMODAudioSource.h  (+6 more)
Source/Tests/: B3DCoreTest.cpp  B3DECSTestSuite.cpp  B3DFileSystemTestSuite.cpp  B3DFrameworkTestSuiteFactory.cpp  B3DFrameworkTestSuiteFactory.h  B3DNetworkTest.cpp  B3DPrefabTestSuite.cpp  B3DPrefabTestSuite.h  B3DUnitTestRunner.cpp  B3DUnitTestScenes.cpp  B3DUnitTestScenes.h  B3DUtilityTest.cpp  B3DUtilityTestSuite.cpp  BsCoreTest.cpp  BsECSTestSuite.cpp  BsECSTestSuite.h  BsFileSystemTestSuite.cpp  BsFileSystemTestSuite.h  BsUnitTestComponents.cpp  BsUnitTestComponents.h  BsUnitTestPrefabUpdateHelper.cpp  BsUnitTestPrefabUpdateHelper.h  BsUnitTestScenes.cpp  BsUnitTestScenes.h  BsUnitTestSerializableObjects.cpp  BsUnitTestSerializableObjects.h  BsUnitTestSerializationHelper.cpp  BsUnitTestSerializationHelper.h  BsUtilityTest.cpp  BsUtilityTestSuite.cpp  BsUtilityTestSuite.h  CMakeLists.txt
(+4091 files in other folders)
